tests/negative/parser/prefix_rsquare.orng
// prefix_rsquare.orng:6:17: error: expected an expression here, got `let`
//     let x = [let y = 4]Int
//                ^
// 
fn main() -> Int {
    let x = [let y = 4]Int
    0
}